# ha-fall-detector

./: .editorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: addon-build.yml  ci.yml  release.yml
addon/fall_detector/: Dockerfile  Dockerfile.gpu  build.yaml  config.yaml  options-dev.json  requirements-gpu.txt  requirements-test.txt  requirements.txt  run.sh
addon/fall_detector/app/: main.py  models.py
addon/fall_detector/app/alerts/: manager.py  mqtt_publisher.py
addon/fall_detector/app/config/: settings.py
addon/fall_detector/app/frigate/: client.py  mqtt_listener.py
addon/fall_detector/tests/: conftest.py  test_fall_scorer.py  test_models.py  test_mqtt_listener.py
custom_components/fall_detector/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  repairs.py  sensor.py  services.yaml  strings.json  switch.py
docker-test/: .env.example  compose.yml  options-test.json
docker-test/frigate/: config.yml
docker-test/mosquitto/: mosquitto.conf
docs/: architecture.md  setup.md  testing.md  threat-model.md  troubleshooting.md  tuning.md
examples/: automation_alert.yaml  automation_escalation.yaml  eufy_indoor_frigate_addition.yaml  frigate_example_config.yaml  ha_package_example.yaml
scripts/: dev.sh  lint.sh  test.sh
tests/: requirements-test.txt
tests/integration/: conftest.py  test_config_flow.py
(+5 files in other folders)
